Revision history for PostScript-Report

0.13   NOT
	- Localize $@ before eval

0.12   2013-05-04
	- No functional changes; just updated metadata
	- Add Moose & MooseX::Types to configure_requires.
	  They're not actually required by Makefile.PL, but if they're
	  not installed, it skips the version check introduced in
	  version 0.11.  Since many CPAN testers don't install modules
	  normally, but just build an @INC containing only the listed
	  requirements, they always skipped the version check and
	  continued to send reports for that Moose bug.

0.11   2013-04-27
	- Clean up type library
	- Warn about conflict between MooseX::Types 0.32 and greater
	  with Moose versions before 2.0800 (fixes RT#77299)
	- Stabilize order of font creation.  Didn't affect printed
	  output, but generated code could be different between runs,
	  causing test failures on Perl 5.17.

0.10   2012-04-04
	- Use the function library provided by PostScript::File 2.20

0.09   2011-05-05
	- Use the improved API in PostScript::File 2.10
	- Fixed LinkField to avoid deprecation warnings in Perl 5.12

0.08   2010-07-20
	- Added first_footer attribute
	- Added "split" as a possible value for footer_align
	- Include more report attributes in dump output
	- Fixed bug in calculating required page count
	  (could cause report footer to overlap report)

0.07   2010-06-19
	- Added extra_styles & get_style, which allows Components to
	  inherit attributes without Containers and the Report needing
	  to know every possible attribute
	- Removed label_font from Report & Component
	  (It's only used by FieldTL, and can be handled by extra_styles.)

0.06   2010-03-26
	- Added the LinkField component
	- Added the metrics attribute to Font
	- Fixed Image to round calculated dimensions to nearest point
	  (A Component's height & width must be integers.)

0.05   2010-02-26
	- Use PostScript::File::Metrics (requires PostScript::File 2.00)
	  You no longer need Font::AFM to get word wrapping.