@@ -1,6 +1,7 @@
 Revision history for PostScript-Report
 
 0.13   NOT
+	- Builder now uses Module::Runtime to load classes
 	- Localize $@ before eval
 
 0.12   2013-05-04
